k3s/test/volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-longhorn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: longhorn-volume
      volumes:
      - name: longhorn-volume
        persistentVolumeClaim:
          claimName: longhorn-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
